<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="#80ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btSelPicFromTakingphoto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="40dip"
        android:background="@drawable/emem_etbg"
        android:text="@string/selPicFromTakePhoto"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btSelPicFromPhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/emem_etbg"
        android:text="@string/selPicFromPhone"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btSelPicCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/emem_etbg"
        android:text="@string/cancel"
        android:textStyle="bold" />

</LinearLayout>